# MAI_OS

./: .gitignore  .gitmodules  README.md
KP/: CMakeLists.txt  main.cpp
KP/config/: config.ini  test.ini
KP/include/: config_parser.h  job_dag.h  solution.hpp
KP/src/: config_parser.cpp  job_dag.cpp  solution.cpp
lab_1/: CMakeLists.txt  Makefile  README.md  main.cpp
lab_1/enums/: Pipes.hpp
lab_1/files/: file1.txt  file2.txt
lab_1/include/: process.hpp  solution.hpp
lab_1/main_files/: main.cpp  main_first_process.cpp  main_second_process.cpp
lab_1/src/: first_process.cpp  process.cpp  second_process.cpp  solution.cpp
lab_2/: CMakeLists.txt  Makefile  README.md
lab_2/analytics/: create_graphic.py
lab_2/files/: input.txt  metrics.txt
lab_2/generator/: generator.py
lab_2/include/: Point.hpp  solution.hpp
lab_2/src/: Point.cpp  main.cpp  solution.cpp
lab_3/: CMakeLists.txt  Makefile  README.md  main.cpp  main_first_process.cpp  main_second_process.cpp
lab_3/bash/: unlink_mmf.sh
lab_3/files/: a.txt  b.txt  c.txt
lab_3/include/: Pipes.h  process.h  solution.h
lab_3/src/: process.cpp  solution.cpp
lab_4/: Makefile  README.md  main.cpp  main_runtime.cpp
lab_5-7/: CMakeLists.txt  CalculationNode.h  ClientProgramm.cpp  ServerProgramm.cpp  Tree.h  ZMQFunctions.h
laba5-7/: server.cpp
laba5-7/include/: actions.h  calculation_node.h  node_msg.h
